Finished stellar winds subsection

--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -8,8 +8,11 @@ List of common abbreviations, if an abbreviation is important enough to warrant 
     \hline
 
     BODMAS & Binary Orbit Dust Model with Accretion and Sputtering & Section \ref{sec:bodmas} \\
+    CAK & Castor, Abbott \& Klein (\citeyear{castor_radiation-driven_1975}) theory \& Section \ref{sec:cak} \\
     CWB & Colliding Wind Binary  & Section \ref{sec:obtype} \\
     GMC & Giant Molecular Cloud & Section \ref{sec:obtype}\\
+    ISM & Interstellar Medium & Section \ref{sec:earlytype} \\
+    KH  & Kelvin-Helmholtz & \ref{sec:earlytype} \\ 
     LBV & Luminous Blue Variable & Section \ref{sec:obtype} \\
     OB  & O or B type star & Section \ref{sec:obtype} \\ 
     RSG & Red Supergiant & Section \ref{sec:obtype} \\
