--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -10,11 +10,12 @@
 \textbf{If you're reading this ahead of time and wondering where you are, don't worry, I'm getting to you, just writing the thesis first!}
 
 I suppose a good place to start when thanking people in a thesis is to start with family.
-To my mum, when I asked you to for help funding my doctoral degree, you said yes, instantly, and without hesitation, considering all you have done and sacrificed for me throughout my life, your agreeing to help was another act of kindness that I can barely repay (trust me, I've done the numbers).
+To my mum, when I asked you to for help funding my doctoral degree, you said yes, instantly, and without hesitation, considering all you have done and sacrificed for me throughout my life, your agreeing to help was another act of kindness that I can barely repay (trust me, I've done the maths).
 You've been there for me, every step of the way, I could not ask for a more wonderful mum, and I hope I can make you proud.
 
 I also owe a debt to my supervisor, Dr. Julian Pittard, you've gone above and beyond when it came to my supervision, you've solved bugs, found mistakes and gotten me out of a jam more times in this project than I can count.
-I'm still amazed how you can rattle off a paper or three from memory, when I've come into your office asking questions about a very specific part of my work, honestly, how do you do that? It's very impressive.
+I'm still amazed how you can rattle off a paper or three from memory when I've come into your office asking questions about a very specific part of my work.
+Honestly, how do you do that? It's very impressive.
 
 No good thesis\footnote{Though the quality of this one is debatable.} wouldn't be complete without a commitment to the authors friends.
 I first met some of you on the literal first day of my undergraduate degree, it's really quite incredible how you've all tolerated my nonsense for so long.
