--- a/Common_Symbols/Common_Symbols.tex
+++ b/Common_Symbols/Common_Symbols.tex
@@ -14,16 +14,16 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
 
   % Alphabetical symbols
 
-  $a$ & Grain radius & \\
+  $a$ & Grain radius & Section \ref{sec:dust} \\
   $C$ & Courant-Friedrichs-Lewy condition & \\
-  $f$ & Wind shock fraction & Equation \ref{eq:windshockfraction} \\
+  $f$ & Wind shock fraction & Eq. \ref{eq:windshockfraction} \\
   $h_e$ & Electron transparency & Section \ref{sec:wcrcooling} \\
   $H_{coll}$ & Grain heating rate due to ions & \\
   $H_{el}$ & Grain heating rate due to electrons & \\
   $i$ & Inclination & \\
-  $L_*$ & Stellar luminosity & \\
-  $M_*$ & Stellar mass & \\
-  $\dot M$ & Mass loss rate & \\
+  $\lumin_\star$ & Stellar luminosity & \\
+  $\mass_\star$ & Stellar mass & \\
+  $\mdot$ & Mass loss rate & \\
   $v_\infty$ & Wind terminal velocity & \\
   $z$ & Dust-to-gas mass ratio  & \\
 
@@ -37,18 +37,18 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
 
   $\xi$ & Grain sticking efficiency & \\
 
-  $\theta_c$ & WCR conic opening angle & Equation \ref{eq:conic} \\
+  $\theta_c$ & WCR conic opening angle & Eq. \ref{eq:conic} \\
   
-  $\tau_\text{KH}$ & Kelvin-Helmholtz timescale & Equation \ref{eq:khtime} \\
-  $\tau_\text{ff}$ & Free-fall timescale & Equation \ref{eq:fftime} \\
-  $\tau_\text{cool}$ & Cooling timescale & Equation \ref{eq:taucool} \\
-  $\tau_\text{esc}$ & Escape timescale & Equation \ref{eq:tauesc} \\
+  $\tau_\text{KH}$ & Kelvin-Helmholtz timescale & Eq. \ref{eq:khtime} \\
+  $\tau_\text{ff}$ & Free-fall timescale & Eq. \ref{eq:fftime} \\
+  $\tau_\text{cool}$ & Cooling timescale & Eq. \ref{eq:taucool} \\
+  $\tau_\text{esc}$ & Escape timescale & Eq. \ref{eq:tauesc} \\
 
   $\mu$ & Mean molecular mass & \\
 
-  $\kappa$ & Sub-timestep fraction & \ref{eq:kappafirstuse} \\
+  $\kappa$ & Sub-timestep fraction & Eq. \ref{eq:kappafirstuse} \\
 
-  $\chi$ & Cooling parameter  & Equation \ref{eq:coolingparameter} \\
+  $\chi$ & Cooling parameter  & Eq. \ref{eq:coolingparameter} \\
 
   % Include Units from here
 
@@ -58,10 +58,11 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
 
   \si{\solarmass} & Solar mass & \num{1.988e+33} \si{\gram} \\
   \si{\solarmass\per\year} & Solar mass per year & \SI{6.301e+25}{\gram\per\second} \\
-  \si{\solarluminosity} & Solar Luminosity & \SI{3.828e+33}{\erg\per\second} \\
+  \si{\solarluminosity} & Solar luminosity & \SI{3.828e+33}{\erg\per\second} \\
+  \si{\solarradius} & Solar radius & \SI{6.957e+10}{\centi\metre} \\
   \si{\au} & Astronomical Unit & \SI{1.496e+13}{\centi\metre} \\
   \si{\parsec} & Parsec & \SI{3.086e+18}{\centi\metre} \\
-  ``Warm'' & Warm temperature regime & \num{1e4}-\SI{1e5}{\kelvin}\footnote{Personally} \\
+  ``Warm'' & Warm temperature regime & \num{1e4}-\SI{1e5}{\kelvin}\footnote{Personal preference} \\
 
 \end{longtable}
 
