--- a/Dedication/dedication.tex
+++ b/Dedication/dedication.tex
@@ -2,7 +2,7 @@
 
 \begin{dedication} %this creates the heading for the dedication page
 
-This thesis is dedicated to my Mum, without her help these past 26 years there's no way I would have gotten this far.
+To my Mum, without her help these past 26 years there's no way I would have gotten this far.
 
 I'll pay you back I promise.
 
