--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -276,6 +276,22 @@
   file = {/Users/py13je/Zotero/storage/PPLMA5FI/Beals - 1934 - P Cygni and radial ejection.pdf}
 }
 
+@article{bealsNatureWolfRayetEmission1929,
+  title = {On the Nature of {{Wolf-Rayet}} Emission},
+  author = {Beals, C. S.},
+  date = {1929-12-01},
+  journaltitle = {Monthly Notices of the Royal Astronomical Society},
+  volume = {90},
+  pages = {202--212},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/90.2.202},
+  url = {https://ui.adsabs.harvard.edu/abs/1929MNRAS..90..202B},
+  urldate = {2022-02-20},
+  keywords = {emission-line stars,Wolf-Rayet stars},
+  annotation = {ADS Bibcode: 1929MNRAS..90..202B},
+  file = {/Users/py13je/Zotero/storage/R8F7ZDMP/Beals - 1929 - On the nature of Wolf-Rayet emission.pdf}
+}
+
 @article{bekaertOriginFateVolatile2020,
   title = {The Origin and Fate of Volatile Elements on {{Earth}} Revisited in Light of Noble Gas Data Obtained from Comet {{67P}}/{{Churyumov-Gerasimenko}}},
   author = {Bekaert, David V. and Broadley, Michael W. and Marty, Bernard},
@@ -393,6 +409,18 @@
   file = {/Users/py13je/Zotero/storage/6W979WL3/Bloot et al. - 2021 - Radio modelling of the brightest and most luminous.pdf;/Users/py13je/Zotero/storage/AK6Y9LNI/6400117.html}
 }
 
+@book{bodenheimerPrinciplesStarFormation2011,
+  title = {Principles of {{Star Formation}}},
+  author = {Bodenheimer, Peter H.},
+  date = {2011-01-01},
+  journaltitle = {Principles of Star Formation:},
+  doi = {10.1007/978-3-642-15063-0},
+  url = {https://ui.adsabs.harvard.edu/abs/2011psf..book.....B},
+  urldate = {2022-02-16},
+  annotation = {ADS Bibcode: 2011psf..book.....B},
+  file = {/Users/py13je/Zotero/storage/JSRMWA4G/Bodenheimer - 2011 - Principles of Star Formation.pdf}
+}
+
 @article{bonnell_formation_nodate,
   title = {The {{Formation}} of {{Massive Binary Stars}}},
   author = {Bonnell, Ian A},
@@ -499,6 +527,21 @@
   pagetotal = {1470},
   annotation = {OCLC: 868368508},
   file = {/Users/py13je/Zotero/storage/YJ5VK5YB/Carroll and Ostlie - 2014 - An introduction to modern astrophysics.pdf}
+}
+
+@article{cassinelliStellarWinds1979,
+  title = {Stellar {{Winds}}},
+  author = {Cassinelli, Joseph P.},
+  date = {1979},
+  journaltitle = {Annual Review of Astronomy and Astrophysics},
+  volume = {17},
+  number = {1},
+  pages = {275--308},
+  doi = {10.1146/annurev.aa.17.090179.001423},
+  url = {https://doi.org/10.1146/annurev.aa.17.090179.001423},
+  urldate = {2022-02-18},
+  annotation = {\_eprint: https://doi.org/10.1146/annurev.aa.17.090179.001423},
+  file = {/Users/py13je/Zotero/storage/UHSUTCR9/Cassinelli - 1979 - Stellar Winds.pdf}
 }
 
 @article{castor_force_1974,
@@ -645,6 +688,23 @@
   abstract = {We have studied the 5\textendash 8.5 mm infrared spectra of the late-type Wolf-Rayet stars WR 118, WR 112, and WR 104, the WN star WR 147, the B5 hypergiant Cygnus OB2 No. 12, and the Galactic center luminous blue variable Pistol Star using the Short Wavelength Spectrometer on the Infrared Space Observatory. We attribute an absorption feature at 6.2 mm in the spectra of WC stars to amorphous carbon dust. This absorption feature is not detected in the diffuse interstellar medium toward the WR 147, Cyg OB2 No. 12, or the Pistol Star, and therefore we suggest that it is circumstellar in nature. In addition, we detect a broad absorption feature extending from approximately 6.5 to 8 mm. We tentatively attribute this absorption to the C i C stretching modes that accompany the 6.2 mm band in aromatic materials. Our analysis of the 6.2 mm absorption profile suggests that the dust grains have to be rather large ({$\sim$}1 mm) and point toward dense clumps as the sites of dust formation.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/WGVXH2FJ/Chiar and Tielens - 2001 - Circumstellar Carbonaceous Material Associated wit.pdf}
+}
+
+@article{chiniSpectroscopicSurveyMultiplicity2012,
+  title = {A Spectroscopic Survey on the Multiplicity of High-Mass Stars},
+  author = {Chini, R. and Hoffmeister, V. H. and Nasseri, A. and Stahl, O. and Zinnecker, H.},
+  date = {2012-08-01},
+  journaltitle = {Monthly Notices of the Royal Astronomical Society},
+  volume = {424},
+  pages = {1925--1929},
+  issn = {0035-8711},
+  doi = {10.1111/j.1365-2966.2012.21317.x},
+  url = {https://ui.adsabs.harvard.edu/abs/2012MNRAS.424.1925C},
+  urldate = {2022-02-16},
+  abstract = {The formation of stars above about 20 M{$\odot$} and their apparently high multiplicity remain heavily debated subjects in astrophysics. We have performed a vast high-resolution radial velocity spectroscopic survey of about 250 O- and 540 B-type stars in the southern Milky Way which indicates that the majority of stars ({$>$}82 per cent) with masses above 16 M{$\odot$} form close binary systems while this fraction rapidly drops to 20 per cent for stars of 3 M{$\odot$}. The binary fractions of O-type stars among different environment classes are: clusters (72 {$\pm$} 13 per cent), associations (73 {$\pm$} 8 per cent), field (43 {$\pm$} 13 per cent) and runaways (69 {$\pm$} 11 per cent). The high frequency of close pairs with components of similar mass argues in favour of a multiplicity originating from the formation process rather than from a tidal capture in a dense cluster. The high binary frequency of runaway O stars that we found in our survey (69 per cent compared to 19-26 per cent in previous surveys) points to the importance of ejection from young star clusters and thus supports the competitive accretion scenario.},
+  keywords = {Astrophysics - Solar and Stellar Astrophysics,binaries: close,binaries: general,binaries: spectroscopic,stars: early-type,stars: formation},
+  annotation = {ADS Bibcode: 2012MNRAS.424.1925C},
+  file = {/Users/py13je/Zotero/storage/KN674Z4A/Chini et al. - 2012 - A spectroscopic survey on the multiplicity of high.pdf}
 }
 
 @article{chokshiDustCoagulation1993,
@@ -1072,6 +1132,20 @@
   langid = {english},
   keywords = {Electronic books,Interstellar matter},
   file = {/Users/py13je/Zotero/storage/L6B8H2AM/Dyson - 2021 - The physics of the interstellar medium.pdf}
+}
+
+@article{eddingtonInternalConstitutionStars1920,
+  title = {The {{Internal Constitution}} of the {{Stars}}},
+  author = {Eddington, A. S.},
+  date = {1920},
+  journaltitle = {The Scientific Monthly},
+  volume = {11},
+  number = {4},
+  eprint = {6491},
+  eprinttype = {jstor},
+  pages = {297--303},
+  publisher = {{American Association for the Advancement of Science}},
+  issn = {0096-3771}
 }
 
 @article{eichler_particle_1993,
@@ -2001,6 +2075,18 @@
   file = {/Users/py13je/Zotero/storage/Z4MR94MT/Henny J. G. L. M. Lamers, Joseph P. Cassinelli-Introduction to stellar winds-CUP (1999).djvu}
 }
 
+@book{lamersUnderstandingStellarEvolution2017,
+  title = {Understanding {{Stellar Evolution}}},
+  author = {Lamers, Henny J. G. L. M. and Levesque, Emily M.},
+  date = {2017-12-01},
+  doi = {10.1088/978-0-7503-1278-3},
+  url = {https://ui.adsabs.harvard.edu/abs/2017use..book.....L},
+  urldate = {2022-02-16},
+  abstract = {'Understanding Stellar Evolution' is based on a series of graduate-level courses taught at the University of Washington since 2004, and is written for physics and astronomy students and for anyone with a physics background who is interested in stars. It describes the structure and evolution of stars, with emphasis on the basic physical principles and the interplay between the different processes inside stars such as nuclear reactions, energy transport, chemical mixing, pulsation, mass loss, and rotation. Based on these principles, the evolution of low- and high-mass stars is explained from their formation to their death. In addition to homework exercises for each chapter, the text contains a large number of questions that are meant to stimulate the understanding of the physical principles. An extensive set of accompanying lecture slides is available for teachers in both Keynote\textregistered{} and PowerPoint\textregistered{} formats.},
+  annotation = {ADS Bibcode: 2017use..book.....L},
+  file = {/Users/py13je/Zotero/storage/VG52HJ7Z/Lamers and Levesque - 2017 - Understanding Stellar Evolution.pdf}
+}
+
 @article{langerOriginDifferentWolfRayet1987,
   title = {The Origin of the Different {{Wolf-Rayet}} Subtypes},
   author = {Langer, N.},
@@ -2114,6 +2200,13 @@
   langid = {english},
   pagetotal = {450},
   file = {/Users/py13je/Zotero/storage/QZT4JN2P/Ben Lauwens, Allen B. Downey - Think Julia_ How to Think Like a Computer Scientist (2019, O'Reilly Media) - libgen.li.pdf}
+}
+
+@online{LectureModelingStars,
+  title = {Lecture 3 : {{Modeling Stars}}},
+  url = {https://www.astro.utu.fi/~cflynn/Stars/l3.html},
+  urldate = {2022-02-17},
+  file = {/Users/py13je/Zotero/storage/X2Y7RW4I/l3.html}
 }
 
 @article{lemaster_effect_2007,
@@ -2392,6 +2485,35 @@
   date = {1993},
   volume = {2},
   publisher = {{CRC Press}}
+}
+
+@article{milneIonizationStellarAtmospheres1921,
+  title = {Ionization in Stellar Atmospheres},
+  author = {Milne, E. A.},
+  date = {1921-09-01},
+  journaltitle = {The Observatory},
+  volume = {44},
+  pages = {261--269},
+  issn = {0029-7704},
+  url = {https://ui.adsabs.harvard.edu/abs/1921Obs....44..261M},
+  urldate = {2022-02-20},
+  annotation = {ADS Bibcode: 1921Obs....44..261M},
+  file = {/Users/py13je/Zotero/storage/KUNZ6PJD/Milne - 1921 - Ionization in stellar atmospheres.pdf}
+}
+
+@article{milnePossibilityEmissionHighspeed1926,
+  title = {On the Possibility of the Emission of High-Speed Atoms from the Sun and Stars},
+  author = {Milne, E. A.},
+  date = {1926-05-01},
+  journaltitle = {Monthly Notices of the Royal Astronomical Society},
+  volume = {86},
+  pages = {459--473},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/86.7.459},
+  url = {https://ui.adsabs.harvard.edu/abs/1926MNRAS..86..459M},
+  urldate = {2022-02-20},
+  annotation = {ADS Bibcode: 1926MNRAS..86..459M},
+  file = {/Users/py13je/Zotero/storage/7G6KLHVT/Milne - 1926 - On the possibility of the emission of high-speed a.pdf}
 }
 
 @article{monnier_first_2011,
@@ -2810,6 +2932,21 @@
   abstract = {The dynamics of radiation-driven winds in hot-luminous-star atmospheres is investigated theoretically on the basis of model computations. The model of Castor et al. (1975) is modified by dropping the radial-streaming approximation for the driving photons and applying the force multipliers of Abbot (1982), and the validity of the model formulation is tested comparing its predictions with those obtained by solving the hydrodynamics and the correct radiative transfer in the comoving frame simultaneously for a sample of weak, intermediate, and strong lines at different continuum wavelengths. Numerical results, including estimates of mass-loss rate and terminal velocity for a sample of OB stars, are presented in tables and graphs and evaluated in detail.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/632RQI96/Pauldrach et al. - 1986 - Radiation-driven winds of hot luminous stars. Impr.pdf;/Users/py13je/Zotero/storage/MPCXTV7F/abstract.html}
+}
+
+@article{pauldrachRadiationdrivenWindsHot1986a,
+  title = {Radiation-Driven Winds of Hot Luminous Stars. {{Improvements}} of the Theory and First Results.},
+  author = {Pauldrach, A. and Puls, J. and Kudritzki, R. P.},
+  date = {1986-08},
+  journaltitle = {Astronomy and Astrophysics, Vol. 164, p. 86-100 (1986)},
+  volume = {164},
+  pages = {86},
+  issn = {0004-6361},
+  url = {https://ui.adsabs.harvard.edu/abs/1986A%26A...164...86P/abstract},
+  urldate = {2022-02-20},
+  abstract = {The dynamics of radiation-driven winds in hot-luminous-star atmospheres is investigated theoretically on the basis of model computations. The model of Castor et al. (1975) is modified by dropping the radial-streaming approximation for the driving photons and applying the force multipliers of Abbot (1982), and the validity of the model formulation is tested comparing its predictions with those obtained by solving the hydrodynamics and the correct radiative transfer in the comoving frame simultaneously for a sample of weak, intermediate, and strong lines at different continuum wavelengths. Numerical results, including estimates of mass-loss rate and terminal velocity for a sample of OB stars, are presented in tables and graphs and evaluated in detail.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/KLN49PU2/Pauldrach et al. - 1986 - Radiation-driven winds of hot luminous stars. Impr.pdf;/Users/py13je/Zotero/storage/V5KZSNXH/abstract.html}
 }
 
 @article{pierazzoOzonePerturbationMediumsize2010,
@@ -3283,6 +3420,21 @@
   pagetotal = {382},
   annotation = {OCLC: 255501661},
   file = {/Users/py13je/Zotero/storage/4DBCGPU6/Rybicki and Lightman - 2004 - Radiative processes in astrophysics.pdf}
+}
+
+@article{sahaRadiationPressureQuantumTheory1919,
+  title = {On {{Radiation-Pressure}} and the {{Quantum Theory}}},
+  author = {Saha, Megh Nad},
+  date = {1919-10-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {50},
+  pages = {220},
+  issn = {0004-637X},
+  doi = {10.1086/142497},
+  url = {https://ui.adsabs.harvard.edu/abs/1919ApJ....50..220S},
+  urldate = {2022-02-20},
+  annotation = {ADS Bibcode: 1919ApJ....50..220S},
+  file = {/Users/py13je/Zotero/storage/IB5ZS66U/Saha - 1919 - On Radiation-Pressure and the Quantum Theory.pdf}
 }
 
 @book{salarisEvolutionStarsStellar2005,
@@ -4192,7 +4344,8 @@
   url = {https://ui.adsabs.harvard.edu/abs/1972ApJ...175..659W},
   urldate = {2022-02-15},
   abstract = {Equilibrium abundances are calculated for various molecules in interstellar H I gas clouds using rates from a previous paper for molecule formation on grain surfaces, and rates from other authors for gas-phase reactions and for photodissociation. Results depend on a parameter (n/100 H ) exp (2.5r ), where n is gas density and r is the visual optical depth from points inside the cloud to its surface. olecules probably are not depleted by condensation if {$<$} tO (hut the situation is uncertain if grains with ice mantles are present). For lightly shielded clouds ( {$<$} 10) where hydrogen is mainly atomic and carbon is mainly C+, the combined abundances of various molecules containing C, N, or 0 are estimated (relative to atomic C, N, and 0) to be 1O- . When exceeds some critical value 300, the neutral C in the gas eliminates photons beyond 11.3 eV; because of their high binding energy, CO molecules are then not dissociated and are expected to be almost as abundant as C atoms. Abundances (with even greater uncertainties) are also estimated for the more complex molecules.},
-  annotation = {ADS Bibcode: 1972ApJ...175..659W}
+  annotation = {ADS Bibcode: 1972ApJ...175..659W},
+  file = {/Users/py13je/Zotero/storage/P7K7GZBH/Watson and Salpeter - 1972 - On the Abundances of Interstellar Molecules.pdf}
 }
 
 @book{weinbergLecturesAstrophysics2019,
@@ -4572,6 +4725,19 @@
   file = {/Users/py13je/Zotero/storage/F9Y3X6LX/2015 - Wolf-Rayet Stars  Proceedings of an International.pdf;/Users/py13je/Zotero/storage/NDICG2PK/8426.html}
 }
 
+@book{wongIntroductoryNuclearPhysics1998,
+  title = {Introductory {{Nuclear Physics}}, 2nd {{Edition}}},
+  author = {Wong, Samuel S. M.},
+  date = {1998-08-01},
+  journaltitle = {Introductory Nuclear Physics},
+  url = {https://ui.adsabs.harvard.edu/abs/1998inp..book.....W},
+  urldate = {2022-02-16},
+  abstract = {A comprehensive, unified treatment of present-day nuclear physics-the fresh edition of a classic text/reference. "A fine and thoroughly up-to-date textbook on nuclear physics . . . most welcome." -Physics Today (on the First Edition). What sets Introductory Nuclear Physics apart from other books on the subject is its presentation of nuclear physics as an integral part of modern physics. Placing the discipline within a broad historical and scientific context, it makes important connections to other fields such as elementary particle physics and astrophysics. Now fully revised and updated, this Second Edition explores the changing directions in nuclear physics, emphasizing new developments and current research-from superdeformation to quark-gluon plasma. Author Samuel S.M. Wong preserves those areas that established the First Edition as a standard text in university physics departments, focusing on what is exciting about the discipline and providing a concise, thorough, and accessible treatment of the fundamental aspects of nuclear properties. In this new edition, Professor Wong: * Includes a chapter on heavy-ion reactions-from high-spin states to quark-gluon plasma * Adds a new chapter on nuclear astrophysics * Relates observed nuclear properties to the underlying nuclear interaction and the symmetry principles governing subatomic particles * Regroups material and appendices to make the text easier to use * Lists Internet links to essential databases and research projects * Features end-of-chapter exercises using real-world data. Introductory Nuclear Physics, Second Edition is an ideal text for courses in nuclear physics at the senior undergraduate or first-year graduate level. It is also an important resource for scientists and engineers working with nuclei, for astrophysicists and particle physicists, and for anyone wishing to learn more about trends in the field.},
+  pagetotal = {472},
+  keywords = {Nuclear & High Energy Physics},
+  annotation = {ADS Bibcode: 1998inp..book.....W}
+}
+
 @article{yudinSpeckleInterferometryRadiative2001,
   title = {Speckle Interferometry and Radiative Transfer Modelling of the {{Wolf-Rayet}} Star {{WR}} 118},
   author = {Yudin, B. and Balega, Y. and Bl\"ocker, T. and Hofmann, K.-H. and Schertl, D. and Weigelt, G.},
@@ -4637,6 +4803,23 @@
   langid = {english},
   keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,Physics - Physics Education},
   file = {/Users/py13je/Zotero/storage/4L3RFHE5/Zingale - 2013 - pyro A teaching code for computational astrophysi.pdf}
+}
+
+@article{zinneckerUnderstandingMassiveStar2007,
+  title = {Toward {{Understanding Massive Star Formation}}},
+  author = {Zinnecker, Hans and Yorke, Harold W.},
+  date = {2007},
+  journaltitle = {Annual Review of Astronomy and Astrophysics},
+  volume = {45},
+  number = {1},
+  pages = {481--563},
+  doi = {10.1146/annurev.astro.44.051905.092549},
+  url = {https://doi.org/10.1146/annurev.astro.44.051905.092549},
+  urldate = {2022-02-16},
+  abstract = {AbstractAlthough fundamental for astrophysics, the processes that produce massive stars are not well understood. Large distances, high extinction, and short timescales of critical evolutionary phases make observations of these processes challenging. Lacking good observational guidance, theoretical models have remained controversial. This review offers a basic description of the collapse of a massive molecular core and a critical discussion of the three competing concepts of massive star formation: {$\blacksquare$} monolithic collapse in isolated cores {$\blacksquare$} competitive accretion in a protocluster environment {$\blacksquare$} stellar collisions and mergers in very dense systems We also review the observed outflows, multiplicity, and clustering properties of massive stars, the upper initial mass function and the upper mass limit. We conclude that high-mass star formation is not merely a scaled-up version of low-mass star formation with higher accretion rates, but partly a mechanism of its own, primarily owing to the role of stellar mass and radiation pressure in controlling the dynamics.},
+  keywords = {accretion,circumstellar disks,HII regions,massive stars,protostars,star formation},
+  annotation = {\_eprint: https://doi.org/10.1146/annurev.astro.44.051905.092549},
+  file = {/Users/py13je/Zotero/storage/X796P5VP/Zinnecker and Yorke - 2007 - Toward Understanding Massive Star Formation.pdf}
 }
 
 @article{zubkoPhysicalModelDust1998a,
