Added latest versions of paper drafts

--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -4627,7 +4627,7 @@
 }
 
 @article{williamsSpectraWC9Stars2015,
-  title = {The Spectra of {{WC9}} Stars: Evolution and Dust Formation\ding{72}},
+  title = {The Spectra of {{WC9}} Stars: Evolution and Dust Formation},
   shorttitle = {The Spectra of {{WC9}} Stars},
   author = {Williams, P. M. and Crowther, P. A. and van der Hucht, K. A.},
   options = {useprefix=true},
