--- a/Thesis.tex
+++ b/Thesis.tex
@@ -147,6 +147,9 @@
 \newcommand{\vinf}{\ensuremath{v^\infty}}
 \newcommand{\dsep}{d\rms{sep}}
 
+\newcommand{\maxdust}{\ensuremath{\dot{\text{M}}_\text{d,max}}}
+\newcommand{\avgdust}{\ensuremath{\dot{\text{M}}_\text{d,avg}}}
+
 \newcommand{\sol}{\ensuremath{_{\odot}}}
 
 \newcommand{\atom}[3]{\prescript{#2}{#3}{\text{#1}}}
@@ -307,7 +310,7 @@
 \include{Chapters/Chapter_3_Numerical_Simulation/Numerical_Simulation.tex}
 \include{Chapters/Chapter_4_Parameter_Space_Paper/Parameter_Space.tex}
 \include{Chapters/Chapter_5_Real_Systems_Paper/Real_Systems_Paper.tex}
-\include{Chapters/Chapter_6_Terminal_Velocity_Paper/Terminal_Velocity_Paper.tex}
+% \include{Chapters/Chapter_6_Terminal_Velocity_Paper/Terminal_Velocity_Paper.tex}
 \include{Chapters/Chapter_7_Final_Notes/Final_Notes.tex}
 
 %\appendix
