--- a/References/library.bib
+++ b/References/library.bib
@@ -4320,7 +4320,7 @@
 }
 
 @article{williamsSpectraWC9Stars2015,
-  title = {The Spectra of {{WC9}} Stars: Evolution and Dust Formation\ding{72}},
+  title = {The Spectra of {{WC9}} Stars: Evolution and Dust Formation},
   shorttitle = {The Spectra of {{WC9}} Stars},
   author = {Williams, P. M. and Crowther, P. A. and {van der Hucht}, K. A.},
   year = {2015},
