Finished death of a star, next up, wolf-rayets

--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -7,6 +7,8 @@ List of common abbreviations, if an abbreviation is important enough to warrant 
     
     \hline
 
+    3$\alpha$ & Triple-$\alpha$ helium burning & \ref{sec:evolvedstars} \\
+    AGB & Asymptotic Giant Branch & \ref{sec:evolvedstars} \\
     BODMAS & Binary Orbit Dust Model with Accretion and Sputtering & Section \ref{sec:bodmas} \\
     CAK & Castor, Abbott \& Klein (\citeyear{castor_radiation-driven_1975}) theory \& Section \ref{sec:cak} \\
     CWB & Colliding Wind Binary  & Section \ref{sec:obtype} \\
