--- a/References/library.bib
+++ b/References/library.bib
@@ -270,6 +270,23 @@
   file = {/Users/py13je/Zotero/storage/R8F7ZDMP/Beals - 1929 - On the nature of Wolf-Rayet emission.pdf}
 }
 
+@article{beechSchoenbergChandrasekharLimitPolytropic1988,
+  title = {The {{Schoenberg-Chandrasekhar}} Limit: {{A}} Polytropic Approximation},
+  shorttitle = {The {{Schoenberg-Chandrasekhar}} Limit},
+  author = {Beech, Martin},
+  year = {1988},
+  month = aug,
+  journal = {Astrophys Space Sci},
+  volume = {147},
+  number = {2},
+  pages = {219--227},
+  issn = {1572-946X},
+  doi = {10.1007/BF00645666},
+  abstract = {The existence of a maximum isothermal core mass fraction (qmax), the Schoenberg-Chandrasekhar limit, is one of the `classic' results from the theory of stellar structure. This limit can be demonstrated through a simplified composite polytrope model in which an isothermal core is surrounded by ann=1 polytrope envelope. While this model underestimatesqmas by {$\sim$}25\% in the homogeneous case, it is accurate to within 5\% in the more realistic inhomogeneous situation.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/4XA8ESIM/Beech - 1988 - The Schoenberg-Chandrasekhar limit A polytropic a.pdf}
+}
+
 @article{bekaertOriginFateVolatile2020,
   title = {The Origin and Fate of Volatile Elements on {{Earth}} Revisited in Light of Noble Gas Data Obtained from Comet {{67P}}/{{Churyumov-Gerasimenko}}},
   author = {Bekaert, David V. and Broadley, Michael W. and Marty, Bernard},
@@ -2162,6 +2179,12 @@
   file = {/Users/py13je/Zotero/storage/D9UG6EIX/Madhusudhan - 2019 - Exoplanetary Atmospheres Key Insights, Challenges.pdf}
 }
 
+@misc{MainSequenceLifetime,
+  title = {Main {{Sequence Lifetime}} | {{COSMOS}}},
+  howpublished = {https://astronomy.swin.edu.au/cosmos/m/main+sequence+lifetime},
+  file = {/Users/py13je/Zotero/storage/ARWCVPTC/main+sequence+lifetime.html}
+}
+
 @article{marchenko_massive_2002,
   title = {Massive {{Binary WR}} 112 and {{Properties}} of {{Wolf-Rayet Dust}}},
   author = {Marchenko, S. V. and Moffat, A. F. J. and Vacca, W. D. and C{\^o}t{\'e}, S. and Doyon, R.},
@@ -3364,6 +3387,21 @@
   file = {/Users/py13je/Zotero/storage/MBUDSHPI/Schlichting and Mukhopadhyay - 2018 - Atmosphere Impact Losses.pdf}
 }
 
+@article{schonbergEvolutionMainSequenceStars1942,
+  title = {On the {{Evolution}} of the {{Main-Sequence Stars}}.},
+  author = {Sch{\"o}nberg, M. and Chandrasekhar, S.},
+  year = {1942},
+  month = sep,
+  journal = {The Astrophysical Journal},
+  volume = {96},
+  pages = {161},
+  issn = {0004-637X},
+  doi = {10.1086/144444},
+  abstract = {The evolution of the stars on the main sequence consequent to the gradual burning of the hydrogen in the central regions is examined. It is shown that, as a result of the decrease in the hydrogen content in these regions, the convective core (normally present in a star) eventually gives place to an isothermal core. It is further shown that there is an upper limit (`--` 10 per cent) to the fraction of the total mass of hydrogen which can thus be exhausted. Some further remarks on what is to be expected beyond this point are also made},
+  annotation = {ADS Bibcode: 1942ApJ....96..161S},
+  file = {/Users/py13je/Zotero/storage/RFUXIQVF/Schönberg and Chandrasekhar - 1942 - On the Evolution of the Main-Sequence Stars..pdf}
+}
+
 @article{schureNewRadiativeCooling2009,
   title = {A {{New Radiative Cooling Curve Based}} on an {{Up-To-Date Plasma Emission Code}}},
   author = {Schure, K. M. and Kosenko, D. and Kaastra, J. S. and Keppens, R. and Vink, J.},
@@ -3468,8 +3506,8 @@
   year = {2008},
   month = nov,
   publisher = {{John Wiley \& Sons}},
+  doi = {10.1002/9783527617722},
   abstract = {Physical Processes in the Interstellar Medium discusses the nature of interstellar matter, with a strong emphasis on basic physical principles, and summarizes the present state of knowledge about the interstellar medium by providing the latest observational data. Physics and chemistry of the interstellar medium are treated, with frequent references to observational results. The overall equilibrium and dynamical state of the interstellar gas are described, with discussions of explosions produced by star birth and star death and the initial phases of cloud collapse leading to star formation.},
-  googlebooks = {vJEymITvabkC},
   isbn = {978-3-527-61773-9},
   langid = {english},
   keywords = {Science / Astronomy,Science / Physics / Astrophysics},
@@ -4417,6 +4455,7 @@
   year = {1998},
   month = aug,
   journal = {Introductory Nuclear Physics},
+  doi = {10.1002/9783527617906},
   abstract = {A comprehensive, unified treatment of present-day nuclear physics-the fresh edition of a classic text/reference. "A fine and thoroughly up-to-date textbook on nuclear physics . . . most welcome." -Physics Today (on the First Edition). What sets Introductory Nuclear Physics apart from other books on the subject is its presentation of nuclear physics as an integral part of modern physics. Placing the discipline within a broad historical and scientific context, it makes important connections to other fields such as elementary particle physics and astrophysics. Now fully revised and updated, this Second Edition explores the changing directions in nuclear physics, emphasizing new developments and current research-from superdeformation to quark-gluon plasma. Author Samuel S.M. Wong preserves those areas that established the First Edition as a standard text in university physics departments, focusing on what is exciting about the discipline and providing a concise, thorough, and accessible treatment of the fundamental aspects of nuclear properties. In this new edition, Professor Wong: * Includes a chapter on heavy-ion reactions-from high-spin states to quark-gluon plasma * Adds a new chapter on nuclear astrophysics * Relates observed nuclear properties to the underlying nuclear interaction and the symmetry principles governing subatomic particles * Regroups material and appendices to make the text easier to use * Lists Internet links to essential databases and research projects * Features end-of-chapter exercises using real-world data. Introductory Nuclear Physics, Second Edition is an ideal text for courses in nuclear physics at the senior undergraduate or first-year graduate level. It is also an important resource for scientists and engineers working with nuclei, for astrophysicists and particle physicists, and for anyone wishing to learn more about trends in the field.},
   keywords = {Nuclear \& High Energy Physics},
   annotation = {ADS Bibcode: 1998inp..book.....W}
